--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../img/white-background.jpg");
+    background: url("white-background.jpg");
     margin: 0;
     font-family: Tahoma;
     line-height: 1.5;
